extra space to right mobile fix

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ body {
 #root {
   width: 1500px;
   max-width: 100%;
+  overflow-x: hidden;
   margin: 0 auto;
   text-align: center;
   border-inline: 1px solid var(--border);
